--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,23 @@
         <activity android:name=".Lab1.Lab1FirstActivity" />
         <activity android:name=".Lab1.Lab1SecondActivity" />
         <activity android:name=".Lab2.Lab2FirstActivity" />
-        <activity android:name=".Lab2.Lab2SecondActivity"></activity>
+        <activity android:name=".Lab2.Lab2SecondActivity" />
+        <activity android:name=".Lab3.Lab3FirstActivity" />
+
+        <service
+            android:name=".Lab3.MyService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".Lab3.MyIntentService"
+            android:exported="false" />
+
+        <activity android:name=".Lab3.Lab3SecondActivity" />
+
+        <service
+            android:name=".Lab3.MyNotStickyService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
