--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest package="com.dat.mylabs"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -37,7 +38,7 @@
             android:exported="true" />
 
         <activity android:name=".Lab3.Lab3SecondActivity" />
-
+        <activity android:name=".Lab4.Lab4Activity"></activity>
     </application>
 
 </manifest>
